# inculog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  toolchain-rpi.cmake
doc/: RS232.txt
doc/tex/: presentation.tex
hardware/: .gitignore
software/RS232_test/: .gitignore  CMakeLists.txt  trace_backup
software/RS232_test/src/: RS232.hpp  filedummy.hpp  incubator.hpp  main.cpp  package.hpp  serial.hpp
software/RS232_test/toxic_spokes/: CMakeLists.txt
software/RS232_test/toxic_spokes/src/toxic_spokes/CAN/: CAN_Socket.hpp
software/RS232_test/toxic_spokes/src/toxic_spokes/IP/: Socket.hpp
software/RS232_test/toxic_spokes/src/toxic_spokes/UNIX/: UNIX_Socket.hpp
software/RS232_test/toxic_spokes/src/toxic_spokes/detail/: FileDescriptor.hpp  Socket_Impl.cpp  chrono_helper.hpp  com_common.hpp  meta_helper.hpp
src/: CANManager.h  InfluxManager.hpp  RS232.hpp  SensorConfig.hpp  filedummy.hpp  incubator.hpp  main.cpp  package.hpp  serial.hpp
toxic_spokes/src/toxic_spokes/CAN/: CAN_Socket.hpp
toxic_spokes/src/toxic_spokes/detail/: FileDescriptor.cpp  IPAddress.cpp  IPAddress.hpp  ScopeGuard.hpp  Socket_Impl.hpp  raise.hpp  socket_common.hpp  system_call_helper.hpp
